<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Question 1 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question1" />

                <RadioButton
                    android:id="@+id/question1Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1RadioButton"
                    android:text="@string/question1Incorrect1" />

                <RadioButton
                    android:id="@+id/question1CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1RadioButton"
                    android:text="@string/question1Correct" />

                <RadioButton
                    android:id="@+id/question1Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1RadioButton"
                    android:text="@string/question1Incorrect2" />

                <RadioButton
                    android:id="@+id/question1Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question1RadioButton"
                    android:text="@string/question1Incorrect3" />
            </RadioGroup>

            <!-- Question 2 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question2" />

                <RadioButton
                    android:id="@+id/question2Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2RadioButton"
                    android:text="@string/question2Incorrect1" />

                <RadioButton
                    android:id="@+id/question2Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2RadioButton"
                    android:text="@string/question2Incorrect2" />

                <RadioButton
                    android:id="@+id/question2CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2RadioButton"
                    android:text="@string/question2Correct" />

                <RadioButton
                    android:id="@+id/question2Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question2RadioButton"
                    android:text="@string/question2Incorrect3" />
            </RadioGroup>

            <!-- Question 3 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3" />

            <EditText
                android:id="@+id/question3Answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/question3Hint" />
            <!-- End Question 3 -->

            <!-- Question 4 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4" />

                <RadioButton
                    android:id="@+id/question4Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4RadioButton"
                    android:text="@string/question4Incorrect1" />

                <RadioButton
                    android:id="@+id/question4Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4RadioButton"
                    android:text="@string/question4Incorrect2" />

                <RadioButton
                    android:id="@+id/question4Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4RadioButton"
                    android:text="@string/question4Incorrect3" />

                <RadioButton
                    android:id="@+id/question4CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question4RadioButton"
                    android:text="@string/question4Correct" />
            </RadioGroup>

            <!-- Question 5 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question5" />

                <RadioButton
                    android:id="@+id/question5Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question5RadioButton"
                    android:text="@string/question5Incorrect1" />

                <RadioButton
                    android:id="@+id/question5Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question5RadioButton"
                    android:text="@string/question5Incorrect2" />

                <RadioButton
                    android:id="@+id/question5Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question5RadioButton"
                    android:text="@string/question5Incorrect3" />

                <RadioButton
                    android:id="@+id/question5CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question5RadioButton"
                    android:text="@string/question5Correct" />
            </RadioGroup>

            <!-- Question 6 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question6" />

                <RadioButton
                    android:id="@+id/question6Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question6RadioButton"
                    android:text="@string/question6Incorrect1" />

                <RadioButton
                    android:id="@+id/question6Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question6RadioButton"
                    android:text="@string/question6Incorrect2" />

                <RadioButton
                    android:id="@+id/question6CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question6RadioButton"
                    android:text="@string/question6Correct" />

                <RadioButton
                    android:id="@+id/question6Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question6RadioButton"
                    android:text="@string/question6Incorrect3" />
            </RadioGroup>

            <!-- Question 7 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question7" />

                <RadioButton
                    android:id="@+id/question7Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question7RadioButton"
                    android:text="@string/question7Incorrect1" />

                <RadioButton
                    android:id="@+id/question7CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question7RadioButton"
                    android:text="@string/question7Correct" />

                <RadioButton
                    android:id="@+id/question7Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question7RadioButton"
                    android:text="@string/question7Incorrect2" />

                <RadioButton
                    android:id="@+id/question7Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question7RadioButton"
                    android:text="@string/question7Incorrect3" />
            </RadioGroup>

            <!-- Question 8 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question8" />

                <RadioButton
                    android:id="@+id/question8Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question8RadioButton"
                    android:text="@string/question8Incorrect1" />

                <RadioButton
                    android:id="@+id/question8Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question8RadioButton"
                    android:text="@string/question8Incorrect2" />

                <RadioButton
                    android:id="@+id/question8Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question8RadioButton"
                    android:text="@string/question8Incorrect3" />

                <RadioButton
                    android:id="@+id/question8CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question8RadioButton"
                    android:text="@string/question8Correct" />

            </RadioGroup>

            <!-- Question 9 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question9" />

            <CheckBox
                android:id="@+id/question9CorrectOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question9CB"
                android:text="@string/question9Correct1" />

            <CheckBox
                android:id="@+id/question9Incorrect1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question9CB"
                android:text="@string/question9Incorrect1" />

            <CheckBox
                android:id="@+id/question9CorrectTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question9CB"
                android:text="@string/question9Correct2" />

            <CheckBox
                android:id="@+id/question9Incorrect2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="question9CB"
                android:text="@string/question9Incorrect2" />

            <!-- Question 10 -->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10" />

                <RadioButton
                    android:id="@+id/question10Incorrect1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question10RadioButton"
                    android:text="@string/question10Incorrect1" />

                <RadioButton
                    android:id="@+id/question10CorrectAnswer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question10RadioButton"
                    android:text="@string/question10Correct" />

                <RadioButton
                    android:id="@+id/question10Incorrect2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question10RadioButton"
                    android:text="@string/question10Incorrect2" />

                <RadioButton
                    android:id="@+id/question10Incorrect3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="question10RadioButton"
                    android:text="@string/question10Incorrect3" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Submit Button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitButton"
                android:text="@string/submitButton" />

            <!-- Reset Button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="resetButton"
                android:text="@string/resetButton" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>